testdata/zkc/invalid/cast_invalid_01.zkc
//error:3:7-15:expected type u8
fn f(x:u8) -> (r:u16) {
  r = x as u16
  return
}
